# didactic-octo-telegram

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  TODO.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  error-detective.md  evaluation-engineer.md  experiment-orchestrator.md  pipeline-engineer.md
.claude/evals/: E0-baseline.md  E1-strategy.md  E4-thesis.md  E7-geo-scoring.md  baseline.json
.claude/rules/: architecture.md  coding-standards.md  eval-workflow.md  vector-store.md  (+1 more)
.codex/: AGENTS.md
description_optimizer/: CLAUDE.md
docs/: AGENTS.md  CONVENTIONS.md  PLANNING_DESIGN_OVERVIEW.md
mlp/: template.yaml
proxy_verification/: AGENTS.md  config.json  pyproject.toml
proxy_verification/docs/: metamcp-analysis.md  verification-report.md
proxy_verification/scripts/: verify.py
proxy_verification/src/: echo_server.py  models.py  optimizer_server.py  proxy_client.py  proxy_server.py  registry.py
proxy_verification/tests/: test_echo_server.py  test_end_to_end.py  test_models.py  test_nodejs_backends.py  test_optimizer_e2e.py  test_proxy_client.py  test_registry.py
scripts/: analyze_pool_task_mapping.py  build_base_pool.py  build_index.py  collect_data.py  collect_github_meta.py  collect_registry_meta.py  convert_mcp_atlas.py  generate_ground_truth.py  import_mcp_zero.py  optimize_descriptions.py  optimize_gt_tools.py  run_comparison_verification.py  run_e0.py  run_grounded_ab_comparison.py  run_retrieval_ab_eval.py  run_selection_eval.py  validate_pool_gt_alignment.py  verify_ground_truth.py
src/: config.py  models.py
tests/: conftest.py
(+263 files in other folders)
