[project]
name = "mcp-discovery"
version = "0.1.0"
description = "MCP Discovery Platform — find the best MCP tool for any query"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "qdrant-client>=1.12.0",
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "langfuse>=2.0.0",
    "wandb>=0.19.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "loguru>=0.7.0",
    "cohere>=5.0.0",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # sys.path.insert before imports is intentional
